--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "canvas-sync"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Nguyen Vu Khang <brew4k@gmail.com>"]
 description = """
@@ -24,3 +24,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 dirs = "4.0.0"
 urlencoding = "2.1.2"
+colored = "2.0.0"
+clap = { version = "4.1.1", features = ["derive"] }
+env_logger = "0.10.0"
+log = "0.4.17"
