--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ colored = "2.0.0"
 clap = { version = "4.1.1", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.17"
+confy = { "version" = "0.5.1", features = ["yaml_conf"], default-features = false }
+futures = "0.3.25"
