--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,6 @@ clap = { version = "4.1.1", features = ["derive"] }
 env_logger = "0.10.0"
 log = "0.4.17"
 confy = { "version" = "0.5.1", features = ["yaml_conf"], default-features = false }
-futures = "0.3.25"
+futures = { "version" = "0.3.25", features = ["thread-pool"] }
 threadpool = "1.8.1"
+num_cpus = "1.15.0"
