--- a/.experiments/cpp/main.h.in
+++ b/.experiments/cpp/main.h.in
@@ -1,2 +1,7 @@
+#include <future> // for std::async and std::future
+#include <iostream>
+
+// clang-format off
 #define canvas_sync_VERSION_MAJOR @canvas_sync_VERSION_MAJOR@
 #define canvas_sync_VERSION_MINOR @canvas_sync_VERSION_MINOR@
+// clang-format on
