--- a/.experiments/cpp/main.h.in
+++ b/.experiments/cpp/main.h.in
@@ -6,9 +6,9 @@
 #include "httplib.h"
 #include "json.hpp"
 
-#include <future> // for std::async and std::future
-#include <iostream>
-#include <vector>
+#include <future>   // for std::async and std::future
+#include <iostream> // for std::cout, std::cerr, std::endl, ...
+#include <vector>   // for std::vector
 
 // clang-format off
 #define canvas_sync_VERSION_MAJOR @canvas_sync_VERSION_MAJOR@
