test: install googletest

--- a/.experiments/cpp/CMakeLists.txt
+++ b/.experiments/cpp/CMakeLists.txt
@@ -2,15 +2,39 @@ cmake_minimum_required(VERSION 3.10)
 
 project(canvas_sync VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1) # to build compile_commands.json
+
+# --- GoogleTest start
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+  DOWNLOAD_EXTRACT_TIMESTAMP true
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+# link the tests
+add_executable(
+  canvas_sync_tests
+  filetree_test.cc
+)
+target_link_libraries(
+  canvas_sync_tests
+  GTest::gtest_main
+)
+include(GoogleTest)
+gtest_discover_tests(canvas_sync_tests)
+# --- GoogleTest end
 
 add_executable(canvas_sync
-  main.cpp
-  errors.cpp
-  canvas_api.cpp
-  filetree.cpp
-  types.cpp)
+  main.cc
+  errors.cc
+  canvas_api.cc
+  filetree.cc
+  types.cc)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
